--- a/found.html
+++ b/found.html
@@ -26,7 +26,20 @@ Browse items that have been found and reported by users.
 <section class="container my-5">
 <div class="row g-4" id="foundItemsContainer"></div>
 </section>
-
+<!-- Footer (UNCHANGED) -->
+  <footer class="footer mt-5">
+    <div class="container text-center">
+      <div style="background: rgba(255,255,255,0.05); padding: 15px; border-radius: 8px;">
+        <p class="mb-1 fw-semibold">Lost & Found Portal</p>
+        <p class="mb-1">
+          Helping users recover lost belongings safely and securely.
+        </p>
+        <p class="small mb-0">
+          © 2026 | Web Technology Mini Project
+        </p>
+      </div>
+    </div>
+  </footer>
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/main.js"></script>
 
