changes for empty condition

--- a/found.html
+++ b/found.html
@@ -25,6 +25,10 @@ Browse items that have been found and reported by users.
 
 <section class="container my-5">
 <div class="row g-4" id="foundItemsContainer"></div>
+<div id="emptyMessage" class="text-center mt-5 d-none">
+  <h5>No items available</h5>
+  <p class="text-muted">Try reporting a new item.</p>
+</div>
 </section>
 <!-- Footer (UNCHANGED) -->
   <footer class="footer mt-5">
