--- a/lost.html
+++ b/lost.html
@@ -28,9 +28,12 @@
 
   <!-- Lost Items Cards -->
   <section class="container my-5">
-    <div class="row g-4" id="lostItemsContainer">
+    <div class="row g-4" id="lostItemsContainer"></div>
       <!-- Cards injected by JS -->
-    </div>
+       <div id="emptyMessage" class="text-center mt-5 d-none">
+         <h5>No items available</h5>
+         <p class="text-muted">Try reporting a new item.</p>
+       </div>
   </section>
 
   <!-- Footer (UNCHANGED) -->
