--- a/feedback.html
+++ b/feedback.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Feedback | Lost & Found</title>
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
@@ -33,9 +34,9 @@ Help us improve the Lost & Found portal.
 <h4 class="fw-bold mb-4 text-center">Rate Your Experience</h4>
 
 <!-- INFO BOXES (NOW PROPER ONE LINE) -->
-<div class="row text-center mb-4">
+<div class="row text-center mb-4 g-3">
 
-<div class="col-4">
+<div class="col-12 col-md-4">
 <div class="p-3 shadow-sm rounded bg-white h-100">
 <h5>🔒 Secure</h5>
 <p class="small text-muted mb-0">
@@ -44,7 +45,7 @@ Improves system safety.
 </div>
 </div>
 
-<div class="col-4">
+<div class="col-12 col-md-4">
 <div class="p-3 shadow-sm rounded bg-white h-100">
 <h5>⚡ Fast</h5>
 <p class="small text-muted mb-0">
@@ -53,7 +54,7 @@ Helps us update quickly.
 </div>
 </div>
 
-<div class="col-4">
+<div class="col-12 col-md-4">
 <div class="p-3 shadow-sm rounded bg-white h-100">
 <h5>❤️ User First</h5>
 <p class="small text-muted mb-0">
@@ -63,6 +64,7 @@ Shapes future features.
 </div>
 
 </div>
+
 
 <!-- FORM -->
 <form id="feedbackForm">
