--- a/found.html
+++ b/found.html
@@ -14,7 +14,8 @@
 
 <div id="navbar"></div>
 
-<section class="container hero text-center my-5">
+<!-- HERO -->
+<section class="container hero text-center my-4 my-md-5">
 <h1 class="fw-bold">
 <i class="bi bi-check-circle"></i> Found Items
 </h1>
@@ -24,30 +25,37 @@ Browse items that have been found and reported by users.
 </p>
 </section>
 
-<section class="container my-5">
+<!-- ITEMS -->
+<section class="container my-4 my-md-5">
+
+<!-- Cards -->
 <div class="row g-4" id="foundItemsContainer"></div>
+
+<!-- Empty message -->
 <div id="emptyMessage" class="text-center mt-5 d-none">
   <h5>No items available</h5>
   <p class="text-muted">Try reporting a new item.</p>
 </div>
+
 </section>
-<!-- Footer (UNCHANGED) -->
-  <footer class="footer mt-5">
-    <div class="container text-center">
-      <div style="background: rgba(255,255,255,0.05); padding: 15px; border-radius: 8px;">
-        <p class="mb-1 fw-semibold">Lost & Found Portal</p>
-        <p class="mb-1">
-          Helping users recover lost belongings safely and securely.
-        </p>
-        <p class="small mb-0">
-          © 2026 | Web Technology Mini Project
-        </p>
-      </div>
-    </div>
-  </footer>
+
+<!-- FOOTER -->
+<footer class="footer mt-5">
+<div class="container text-center">
+<div style="background: rgba(255,255,255,0.05); padding: 15px; border-radius: 8px;">
+<p class="mb-1 fw-semibold">Lost & Found Portal</p>
+<p class="mb-1">
+Helping users recover lost belongings safely and securely.
+</p>
+<p class="small mb-0">
+© 2026 | Web Technology Mini Project
+</p>
+</div>
+</div>
+</footer>
+
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/main.js"></script>
 
 </body>
 </html>
-
