--- a/lost.html
+++ b/lost.html
@@ -1,59 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Lost Items | Lost & Found</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Lost Items | Lost & Found</title>
 
-  <!-- Bootstrap Icons -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/css/style.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+<link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
 
-  <!-- Navbar -->
-  <div id="navbar"></div>
+<div id="navbar"></div>
 
-  <!-- Page Hero (SAME AS HOME) -->
-  <section class="container hero text-center my-5">
-    <h1 class="fw-bold">
-      <i class="bi bi-search"></i> Lost Items
-    </h1>
-    <p class="hero-subtitle">
-      Browse recently reported lost items and help them reach their owners.
-    </p>
-  </section>
+<!-- HERO -->
+<section class="container hero text-center my-4 my-md-5">
 
-  <!-- Lost Items Cards -->
-  <section class="container my-5">
-    <div class="row g-4" id="lostItemsContainer"></div>
-      <!-- Cards injected by JS -->
-       <div id="emptyMessage" class="text-center mt-5 d-none">
-         <h5>No items available</h5>
-         <p class="text-muted">Try reporting a new item.</p>
-       </div>
-  </section>
+<h1 class="fw-bold">
+<i class="bi bi-search"></i> Lost Items
+</h1>
 
-  <!-- Footer (UNCHANGED) -->
-  <footer class="footer mt-5">
-    <div class="container text-center">
-      <div style="background: rgba(255,255,255,0.05); padding: 15px; border-radius: 8px;">
-        <p class="mb-1 fw-semibold">Lost & Found Portal</p>
-        <p class="mb-1">
-          Helping users recover lost belongings safely and securely.
-        </p>
-        <p class="small mb-0">
-          © 2026 | Web Technology Mini Project
-        </p>
-      </div>
-    </div>
-  </footer>
+<p class="hero-subtitle">
+Browse recently reported lost items and help them reach their owners.
+</p>
 
-  <!-- Scripts -->
-  <script src="assets/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/js/main.js"></script>
+</section>
+
+
+<!-- ITEMS -->
+<section class="container my-4 my-md-5">
+
+<!-- Cards -->
+<div class="row g-4" id="lostItemsContainer"></div>
+
+<!-- Empty message -->
+<div id="emptyMessage" class="text-center mt-5 d-none">
+<h5>No items available</h5>
+<p class="text-muted">Try reporting a new item.</p>
+</div>
+
+</section>
+
+
+<!-- FOOTER -->
+<footer class="footer mt-5">
+
+<div class="container text-center">
+
+<div style="background: rgba(255,255,255,0.05); padding: 15px; border-radius: 8px;">
+
+<p class="mb-1 fw-semibold">Lost & Found Portal</p>
+
+<p class="mb-1">
+Helping users recover lost belongings safely and securely.
+</p>
+
+<p class="small mb-0">
+© 2026 | Web Technology Mini Project
+</p>
+
+</div>
+
+</div>
+
+</footer>
+
+
+<script src="assets/js/bootstrap.bundle.min.js"></script>
+<script src="assets/js/main.js"></script>
+
 </body>
 </html>
